tests/enum_from/compile_fail/container/invalid_source_kind.stderr
error: expected `,`
 --> tests/enum_from/compile_fail/container/invalid_source_kind.rs:8:19
  |
8 | #[enum_from(Source::Unit)] // Should be #[enum_from(Source)]
  |                   ^
